aws/workloads.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: queue
  labels:
    app: queue
    
spec:
  # modify replicas according to demand/desire
  replicas: 1
  # minReadySeconds: 30 # This ensures a particular microservice is always available
  
  selector:
    matchLabels:
      app: queue

  template: # template for the pods
    metadata:
      labels:
        app: queue
    spec:
      containers:
      - name: queue
        image: richardchesterwood/k8s-fleetman-queue:release2
        resources:
          requests:
            memory: 300Mi # 300Megabytes
            cpu: 100m #100milli-cores to give clarity to scheduler
          limits:
            memory: 300Mi
            cpu: 100m

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-simulator
  labels:
    app: position-simulator
    
spec:
  # modify replicas according to demand/desire
  replicas: 1
  # minReadySeconds: 30 # This ensures a particular microservice is always available
  
  selector:
    matchLabels:
      app: position-simulator

  template: # template for the pods
    metadata:
      labels:
        app: position-simulator
    spec:
      containers:
      - name: position-simulator
        image: richardchesterwood/k8s-fleetman-position-simulator:release2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: position-tracker
  labels:
    app: position-tracker
    
spec:
  # modify replicas according to demand/desire
  replicas: 1
  # minReadySeconds: 30 # This ensures a particular microservice is always available
  
  selector:
    matchLabels:
      app: position-tracker

  template: # template for the pods
    metadata:
      labels:
        app: position-tracker
    spec:
      containers:
      - name: position-tracker
        image: richardchesterwood/k8s-fleetman-position-tracker:release3
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  labels:
    app: api-gateway
    
spec:
  # modify replicas according to demand/desire
  replicas: 1
  # minReadySeconds: 30 # This ensures a particular microservice is always available
  
  selector:
    matchLabels:
      app: api-gateway

  template: # template for the pods
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
      - name: api-gateway
        image: richardchesterwood/k8s-fleetman-api-gateway:release2
        readinessProbe:
          httpGet:
            path: /
            port: 8080 # Default time 10secs
        resources:
          requests:
            memory: 200Mi
            cpu: 50m


---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  labels:
    app: webapp
    
spec:
  # modify replicas according to demand/desire
  replicas: 2
  # minReadySeconds: 30 # This ensures a particular microservice is always available
  
  selector:
    matchLabels:
      app: webapp

  template: # template for the pods
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: richardchesterwood/k8s-fleetman-webapp-angular:securewss
